# crucible

./: .gitignore  .goneatignore  .yamlfmt  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  REPOSITORY_SAFETY_PROTOCOLS.md  agentic.go  agentic_test.go  biome.json  config.go  config_test.go  crucible_test.go  go.mod  json  package.json  schema_utils_test.go  schemas.go  terminal.go  tsconfig.json
lang/python/: README.md  pyproject.toml  ruff.toml
lang/python/config/agentic/roles/: README.md  prodmktg.yaml
lang/python/config/taxonomy/: metrics.yaml
lang/python/docs/: README.md
lang/python/docs/architecture/: fulmen-ecosystem-guide.md  fulmen-fixture-standard.md  fulmen-forge-codex-standard.md  fulmen-forge-microtool-standard.md  fulmen-helper-library-standard.md
lang/python/docs/architecture/decisions/: ADR-0013-rust-sync-pattern-validation.md
lang/python/docs/standards/: code-generation-template-standard.md
lang/python/docs/standards/fulmen/: module-registry.md
lang/python/src/crucible/: __init__.py  agentic.py  terminal.py
lang/python/src/crucible/foundry/: __init__.py
lang/python/src/crucible/fulencode/: enums.py
lang/python/tests/: test_agentic.py  test_schemas.py  test_terminal.py
lang/rust/: .clippy.toml  .gitignore  Cargo.toml  README.md  rustfmt.toml
lang/rust/config/taxonomy/: fixture-catalog.yaml  metrics.yaml
lang/rust/docs/architecture/: fulmen-fixture-standard.md
lang/rust/schemas/meta/: README.md
lang/rust/src/: agentic.rs  lib.rs
lang/rust/src/foundry/: exit_codes.rs  mod.rs
lang/rust/src/fulencode/: types.rs
lang/rust/src/fulhash/: types.rs
lang/rust/src/fulpack/: types.rs
(+295 files in other folders)
