[project]
name = "fulmenhq-crucible"
version = "0.2.5"
description = "Crucible - Where Scale is Forged. Standards and schemas for the FulmenHQ ecosystem."
authors = [
    {name = "FulmenHQ", email = "dev@3leaps.net"}
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
keywords = ["fulmenhq", "crucible", "schemas", "standards", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "pyyaml>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crucible"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]
